Fix revisionless capabilities
NetconfCapabilityMonitoringService seems to indicate it cannot work with
modules without a revision due to modeling restrictions. This is not
accurate, as we should be using empty string to represent an absent
revision.

JIRA: NETCONF-808
Change-Id: I2dbcdc0cc0bb7e6560a46986c8c06388b8cc23d6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>